style(merlin-www-*): minor margin adjustments to correct alignment of slices

--- a/packages/merlin-www-section-gallery/sass/glamour_redux/glamour_redux.scss
+++ b/packages/merlin-www-section-gallery/sass/glamour_redux/glamour_redux.scss
@@ -6,7 +6,6 @@
 .c-gallery {
     margin-bottom: $MOBILE_SLICE_MARGIN;
     margin-top: $MOBILE_SLICE_MARGIN;
-    max-width: $MAXIMUM_PAGE_WIDTH + $DESKTOP_SIDE_GUTTER + $DESKTOP_SIDE_GUTTER;
     padding: 0;
 
     @include min-screen($TABLET_SIDE_GUTTER_BREAKPOINT) {
