--- a/packages/merlin-www-section-superfeature/sass/glamour_redux/glamour_redux.scss
+++ b/packages/merlin-www-section-superfeature/sass/glamour_redux/glamour_redux.scss
@@ -6,7 +6,7 @@
 .c-superfeature {
     margin-bottom: $MOBILE_SLICE_MARGIN;
     margin-top: $MOBILE_SLICE_MARGIN;
-    max-width: $MAXIMUM_PAGE_WIDTH + $DESKTOP_SIDE_GUTTER + $DESKTOP_SIDE_GUTTER;
+    max-width: $MAXIMUM_PAGE_WIDTH;
     padding: 0;
 
     @include min-screen($TABLET_SIDE_GUTTER_BREAKPOINT) {
